# simzEngine2

./: .gitignore  README.md
project/: CMakeLists.txt  Simz Engine 2.0.sln  Simz Engine 2.0.vcxproj  Simz Engine 2.0.vcxproj.filters  imgui.ini  main.cpp  windows.env.cmake
project/Debug/: vc142.idb
project/Debug/Simz Engine 2.0.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Simz Engine 2.0.lastbuildstate
project/assets/shaders/: diffuseFrag.frag.spv  diffuseShader.frag.spv  diffuseShader.vert.spv  diffuseVert.vert.spv  negativeShader.frag.spv
project/assets/shaders/vertexShaders/: diffuseShader.vert
project/engine/general/include/: Quat.h  generalIncludes.h
project/engine/general/source/: Quat.cpp
project/engine/imGuiWrappers/include/: imGuiInstance.h  imGuiWrappersGeneralIncludes.h
project/engine/imGuiWrappers/source/: imGuiInstanceDrawer.cpp  imGuiInstanceGui.cpp  imGuiInstanceInit.cpp
project/engine/physicsSystem/include/: Collider.h  CollisionUtilities.h  EventManager.h  RigidBody.h  SphereCollider.h
project/engine/physicsSystem/source/: CollisionUtilities.cpp  SphereCollider.cpp
project/engine/resourceManager/include/: inputManager.h  meshDataManager.h  textureDataManager.h  vulkanObjectManager.h  vulkanPipelineManager.h
project/engine/resourceManager/source/: inputManager.cpp
project/engine/sceneSystem/include/: Scene.h  camera.h  gameObject.h  rendererComponent.h  transform.h  transformComponent.h
project/engine/sceneSystem/source/: camera.cpp  gameObject.cpp  rendererComponent.cpp  scene.cpp  transform.cpp  transformComponent.cpp
project/engine/vulkanWrappers/include/: generalIncludes.h  modelDataIncludes.h  vulkanDrawer.h  vulkanInstance.h  vulkanModelData.h  vulkanPipeline.h  vulkanRenderer.h  vulkanSurface.h  vulkanTextureSampler.h
project/engine/vulkanWrappers/source/: vulkanDrawer.cpp  vulkanDynamicUniformBuffer.cpp  vulkanInstanceCommandPool.cpp  vulkanInstanceDevice.cpp  vulkanInstanceInstance.cpp  vulkanMeshData.cpp  vulkanObject.cpp  vulkanPipeline.cpp  vulkanRenderer.cpp  vulkanSceneData.cpp  vulkanSurface.cpp  vulkanTextureData.cpp  vulkanTextureSampler.cpp
project/general/include/: generalIncludes.h  timer.h
project/imGuiWrappers/include/: imGuiInstance.h
project/imGuiWrappers/source/: imGuiInstanceDrawer.cpp  imGuiInstanceGui.cpp  imGuiInstanceInit.cpp
project/physicsSystem/include/: BoxCollider.h  CapsuleCollider.h  Collider.h  CollisionUtilities.h  EventManager.h  RigidBody.h  SphereCollider.h
project/physicsSystem/src/: CapsuleCollider.cpp  ColliderDoesCollideWithDefinition.cpp  CollisionUtilities.cpp  RigidBody.cpp  SphereCollider.cpp
project/renderLogic/include/: Scene.h  camera.h  gameObject.h  object.h
project/renderLogic/source/: camera.cpp  gameObject.cpp  object.cpp  scene.cpp
project/resourceManager/include/: inputManager.h  meshDataManager.h  resourceManagerGeneralIncludes.h  textureDataManager.h  vulkanObjectManager.h  windowManager.h
project/resourceManager/source/: inputManager.cpp  windowManager.cpp
project/shaders/: compile.bat
project/shaders/fragmentShaders/: baseShader.frag  negativeFrag.spv  negativeShader.frag
project/shaders/vertexShaders/: baseShader.vert  vert.spv
project/vulkanWrappers/include/: generalIncludes.h  modelDataIncludes.h  vkCommandWrapper.h  vkDeviceWrapper.h  vkInstanceWrapper.h  vkPipelineWrapper.h  vkSurfaceWrapper.h  vkSwapChainWrapper.h  vkSyncWrapper.h  vkWindowSurfaceWrapper.h  vulkanDrawer.h  vulkanDynamicUniformBuffer.h  vulkanIncludes.h  vulkanInstance.h  vulkanMeshData.h  vulkanModelData.h  vulkanObject.h  vulkanRenderPass.h  vulkanRenderer.h  vulkanSceneData.h  vulkanSurface.h  vulkanTextureData.h  vulkanTextureSampler.h
project/vulkanWrappers/src/: vkCommandWrapper.cpp  vkDeviceWrapper.cpp  vkInstanceWrapper.cpp  vkInstanceWrapperValidationLayerHelper.cpp  vkPipelineWrapper.cpp  vkSurfaceWrapper.cpp  vkSwapChainWrapper.cpp  vkSyncWrapper.cpp  vkWindowSurfaceWrapper.cpp  vulkanDrawer.cpp  vulkanDynamicUniformBuffer.cpp  vulkanInstanceCallback.cpp  vulkanInstanceCommandPool.cpp  vulkanInstanceDevice.cpp  vulkanInstanceInstance.cpp  vulkanInstanceMisc.cpp  vulkanMeshData.cpp  vulkanModelData.cpp  vulkanObject.cpp  vulkanRenderPass.cpp  vulkanRenderer.cpp  vulkanSceneData.cpp  vulkanSurface.cpp  vulkanTextureData.cpp  vulkanTextureSampler.cpp
project/x64/Debug/: Simz Engine 2.0.exe.recipe  Simz Engine 2.0.ilk  Simz Engine 2.0.vcxproj.FileListAbsolute.txt  vc142.idb
project/x64/Debug/Simz Engine 2.0.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Simz Engine 2.0.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
